# lpil-gerby-builder

./: .gitignore  Readme.md  example-config.yaml  pyproject.toml
docs/: Readme.md
lpilGerbyBuilder/: cli.py  configuration.py  postTasks.py  preTasks.py  runATask.py  utils.py
scripts/: installEditableLpilGerbyBuilderCommand  runGerbyTools
